--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,14 @@
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 10vmin;
   pointer-events: none;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vmin;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,13 +20,15 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.board {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 300px;
 }
 
 .column {
-  float: left;
-  width: 40%;
+  flex: 1;
   padding: 10px;
   height: 300px; /* Should be removed. Only for demonstration */
 }
