--- a/src/card/card.css
+++ b/src/card/card.css
@@ -1,4 +1,15 @@
 .card {
-  background-color: lemonchiffon;
+  background-color: beige;
   margin: 20px;
+  padding: 1px;
+  cursor: grab;
+  border-radius: 10px;
+}
+
+.card-detail {
+  flex: 1;
+  background-color: beige;
+  padding: 20px;
+  border-radius: 10px;
+  overflow-y: auto;
 }
