--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,5 +1,5 @@
 .card {
-  background-color: beige;
+  background-color: #36383b;
   margin: 20px;
   padding: 1px;
   cursor: grab;
@@ -8,7 +8,8 @@
 
 .card-detail {
   flex: 1;
-  background-color: beige;
+  background-color: #282c34;
+  color: #61DAFB;
   padding: 20px;
   border-radius: 10px;
   overflow-y: auto;
